--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://shubhammishra2310:oXmmLdCB5KF7eimr@cluster0.qvcxb6m.mongodb.net/retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://shubhammishra2310:E9wPiSEwAoxgmvuT@cluster0.hygxzo1.mongodb.net/foodapp?retryWrites=true&w=majority
 JWT_SECRET=shubhammishra2310
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
