add the Amazing Hyderabadi Dum Biryani

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
-MONGO_URI=mongodb+srv://shubhammishra2310:E9wPiSEwAoxgmvuT@cluster0.hygxzo1.mongodb.net/foodapp?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://mishrashubham2310:RJ9xEfDekEjCSe9X@cluster0.z2c5bir.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=shubhammishra2310
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+CLOUDINARY_CLOUD_NAME=dedht2hi3
+CLOUDINARY_API_KEY=543647646854619
+CLOUDINARY_API_SECRET=UesnyX0LOGnGK3wl_O3lL6zhe_g
