--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URI=mongodb+srv://mishrashubham2310:RJ9xEfDekEjCSe9X@cluster0.z2c5bir.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URI=mongodb+srv://mishrashubham2310:RJ9xEfDekEjCSe9X@cluster0.z2c5bir.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://mishrashubham2310_db_user:7TTq9Z0uxbAclqgS@cluster0.bphke3c.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=shubhammishra2310
 CLOUDINARY_CLOUD_NAME=dedht2hi3
 CLOUDINARY_API_KEY=543647646854619
