--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "router": "^2.2.0"
+    "router": "^2.2.0",
+    "socket.io": "^4.8.1"
   }
 }
